minor changes to fix spacing issues

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,16 +2,30 @@
   background-image: url("/images/asfalt-light.png");
   background-color: peru;
   height: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
+}
+
+.avatar img {
+  height: 200px;
+  width: 200px;
 }
 
 .avatar-name {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* align-items: flex-end; */
+  font-size: 24px;
+  /* border: 2px dashed green; */
 }
