--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,16 @@
   flex-direction: column;
   padding: 1.5em;
   height: 120px;
+  width: 100%;
+  position: relative;
+  top: 0;
+  font-size: 24px;
+  /* position: fixed; */
+}
+
+nav {
+  position: relative;
+  right: 7px;
 }
 
 .row1 {
